@@ -242,11 +242,9 @@ name|hadoop
 operator|.
 name|hdfs
 operator|.
-name|server
+name|client
 operator|.
-name|namenode
-operator|.
-name|NameNode
+name|HdfsClientConfigKeys
 import|;
 end_import
 
@@ -3200,9 +3198,9 @@ try|try
 block|{
 name|runTestCache
 argument_list|(
-name|NameNode
+name|HdfsClientConfigKeys
 operator|.
-name|DEFAULT_PORT
+name|DFS_NAMENODE_RPC_PORT_DEFAULT
 argument_list|)
 expr_stmt|;
 block|}
@@ -3220,11 +3218,11 @@ name|LOG
 operator|.
 name|warn
 argument_list|(
-literal|"Cannot test NameNode.DEFAULT_PORT (="
+literal|"Cannot test HdfsClientConfigKeys.DFS_NAMENODE_RPC_PORT_DEFAULT (="
 operator|+
-name|NameNode
+name|HdfsClientConfigKeys
 operator|.
-name|DEFAULT_PORT
+name|DFS_NAMENODE_RPC_PORT_DEFAULT
 operator|+
 literal|")"
 argument_list|,
@@ -3366,9 +3364,9 @@ if|if
 condition|(
 name|port
 operator|==
-name|NameNode
+name|HdfsClientConfigKeys
 operator|.
-name|DEFAULT_PORT
+name|DFS_NAMENODE_RPC_PORT_DEFAULT
 condition|)
 block|{
 comment|//test explicit default port
@@ -3393,9 +3391,9 @@ operator|.
 name|getHost
 argument_list|()
 argument_list|,
-name|NameNode
+name|HdfsClientConfigKeys
 operator|.
-name|DEFAULT_PORT
+name|DFS_NAMENODE_RPC_PORT_DEFAULT
 argument_list|,
 name|uri
 operator|.
