@@ -381,6 +381,9 @@ Release 2.8.0 - UNRELEASED
     MAPREDUCE-6443. Add JvmPauseMonitor to JobHistoryServer. (Robert Kanter
     via junping_du)
 
+    MAPREDUCE-6477. Replace usage of deprecated NameNode.DEFAULT_PORT in
+    TestFileSystem. (Mingliang Liu via wheat9)
+
   OPTIMIZATIONS
 
     MAPREDUCE-6376. Add avro binary support for jhist files (Ray Chiang via
